Remove autoplay to fix buffering

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <p id="main-subtitle" class="subtitle">Système d'évaluation par critères et niveaux de maîtrise</p>
 
         <div class="video-container">
-            <video id="video-demo" controls autoplay muted loop>
+            <video id="video-demo" controls muted loop>
                 <source src="videodemo.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas la lecture de vidéos.
             </video>
