--- a/index.html
+++ b/index.html
@@ -188,6 +188,22 @@
             </ul>
         </div>
 
+        <div id="examples-section" style="margin: 30px 0; padding: 20px; background: #f8f9fa; border-radius: 15px;">
+            <h2 id="examples-title" style="color: #764ba2; margin-bottom: 15px;">📄 Exemples de fichiers générés</h2>
+            <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
+                <a href="exemple_arabe.docx" download class="example-btn"
+                    style="display: inline-flex; align-items: center; gap: 10px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 12px 25px; border-radius: 10px; text-decoration: none; font-weight: bold; transition: all 0.3s;">
+                    <span>📥</span>
+                    <span id="example-ar-text">Exemple Arabe</span>
+                </a>
+                <a href="exemple_français.docx" download class="example-btn"
+                    style="display: inline-flex; align-items: center; gap: 10px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 12px 25px; border-radius: 10px; text-decoration: none; font-weight: bold; transition: all 0.3s;">
+                    <span>📥</span>
+                    <span id="example-fr-text">Exemple Français</span>
+                </a>
+            </div>
+        </div>
+
         <a href="https://github.com/chtouroubusiness-code/GenerateurEvaluationDistribution/releases/download/v1.0.0/GenerateurEvaluation_Installer_v1.0.0.exe"
             class="download-btn">
             <span id="btn-text">Télécharger</span>
@@ -205,6 +221,9 @@
                 title: "📋 تطبيق إنشاء جدول التقييم",
                 subtitle: "نظام التقييم بالمعايير ومستويات الإتقان",
                 btn: "تحميل البرنامج",
+                examplesTitle: "📄 أمثلة للملفات المُنشأة",
+                exampleAr: "مثال بالعربية",
+                exampleFr: "مثال بالفرنسية",
                 dir: "rtl",
                 lang: "ar"
             },
@@ -212,6 +231,9 @@
                 title: "📋 Générateur de Tableau d'Évaluation",
                 subtitle: "Système d'évaluation par critères et niveaux de maîtrise",
                 btn: "Télécharger",
+                examplesTitle: "📄 Exemples de fichiers générés",
+                exampleAr: "Exemple Arabe",
+                exampleFr: "Exemple Français",
                 dir: "ltr",
                 lang: "fr"
             }
@@ -222,6 +244,9 @@
             document.getElementById('main-title').textContent = c.title;
             document.getElementById('main-subtitle').textContent = c.subtitle;
             document.getElementById('btn-text').textContent = c.btn;
+            document.getElementById('examples-title').textContent = c.examplesTitle;
+            document.getElementById('example-ar-text').textContent = c.exampleAr;
+            document.getElementById('example-fr-text').textContent = c.exampleFr;
 
             if (lang === 'ar') {
                 document.getElementById('steps-ar').style.display = 'block';
