Add payment details (D17 + phone number)

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <ul>
                 <li>1️⃣ اضغط على زر "تحميل" أدناه للحصول على ملف التثبيت (.exe).</li>
                 <li>2️⃣ افتح الملف المحمل واتبع تعليمات معالج التثبيت.</li>
-                <li>3️⃣ اتصل بالدعم الفني للحصول على رمز تفعيل النسخة.</li>
+                <li>3️⃣ اتصل بالدعم لإجراء الدفع (عبر D17 على الرقم +216 22 276 709) وتفعيل النسخة.</li>
                 <li>4️⃣ ابدأ باستخدام التطبيق مباشرة من اختصار سطح المكتب.</li>
             </ul>
         </div>
@@ -183,7 +183,8 @@
             <ul>
                 <li>1️⃣ Cliquez sur le bouton "Télécharger" ci-dessous pour obtenir l'installeur (.exe).</li>
                 <li>2️⃣ Ouvrez le fichier téléchargé et suivez les instructions de l'assistant.</li>
-                <li>3️⃣ Contactez le support pour acquérir et activer votre licence.</li>
+                <li>3️⃣ Contactez le support pour faire le paiement (par D17 sur le numéro +216 22 276 709) et activer
+                    votre licence.</li>
                 <li>4️⃣ Lancez l'application directement depuis le raccourci sur votre bureau.</li>
             </ul>
         </div>
