Fix phone number RTL display in Arabic

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <ul>
                 <li>1️⃣ اضغط على زر "تحميل" أدناه للحصول على ملف التثبيت (.exe).</li>
                 <li>2️⃣ افتح الملف المحمل واتبع تعليمات معالج التثبيت.</li>
-                <li>3️⃣ اتصل بالدعم لإجراء الدفع (عبر D17 على الرقم +216 22 276 709) وتفعيل النسخة.</li>
+                <li>3️⃣ اتصل بالدعم لإجراء الدفع (عبر D17 على الرقم <bdi>+216 22 276 709</bdi>) وتفعيل النسخة.</li>
                 <li>4️⃣ ابدأ باستخدام التطبيق مباشرة من اختصار سطح المكتب.</li>
             </ul>
         </div>
