Update button text for download in multiple languages

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             ar: {
                 title: "📋 تطبيق إنشاء جدول التقييم",
                 subtitle: "نظام التقييم بالمعايير ومستويات الإتقان",
-                btn: "تحميل البرنامج",
+                btn: "(قد يستغرق بعض الوقت)تحميل البرنامج",
                 examplesTitle: "📄 أمثلة للملفات المُنشأة",
                 exampleAr: "مثال بالعربية",
                 exampleFr: "مثال بالفرنسية",
@@ -231,7 +231,7 @@
             fr: {
                 title: "📋 Générateur de Tableau d'Évaluation",
                 subtitle: "Système d'évaluation par critères et niveaux de maîtrise",
-                btn: "Télécharger",
+                btn: "Télécharger ( peut prendre un peu du temps )",
                 examplesTitle: "📄 Exemples de fichiers générés",
                 exampleAr: "Exemple Arabe",
                 exampleFr: "Exemple Français",
